@@ -11,6 +11,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.concurrent.*;
 
@@ -136,7 +137,7 @@ class CompletableFutureTimeoutUnitTest {
     private CompletableFuture<String> fetchProductData() {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                URL url = new URL("http://localhost:8080/api/dummy");
+                URL url = new URI("http://localhost:8080/api/dummy").toURL();
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
                 try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
@@ -151,7 +152,7 @@ class CompletableFutureTimeoutUnitTest {
                 } finally {
                     connection.disconnect();
                 }
-            } catch (IOException e) {
+            } catch (Exception e) {
                 return "";
             }
         });
