@@ -1,11 +1,7 @@
 package com.baeldung.networking.proxies;
 
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.InetSocketAddress;
-import java.net.Proxy;
-import java.net.Socket;
-import java.net.URL;
+import java.net.*;
 
 public class SocksProxyDemo {
 
@@ -13,9 +9,9 @@ public class SocksProxyDemo {
     private static final String SOCKET_SERVER_HOST = "someserver.baeldung.com";
     private static final int SOCKET_SERVER_PORT = 1111;
 
-    public static void main(String... args) throws IOException {
+    public static void main(String... args) throws Exception {
 
-        URL weburl = new URL(URL_STRING);
+        URL weburl = new URI(URL_STRING).toURL();
         Proxy socksProxy 
           = new Proxy(Proxy.Type.SOCKS, new InetSocketAddress("127.0.0.1", 1080));
         HttpURLConnection socksConnection 
