@@ -1,32 +1,30 @@
 package com.baeldung.jackson.jsonurlreader;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.nio.charset.Charset;
-
-import org.apache.commons.io.IOUtils;
-import org.json.JSONObject;
-
 import com.fasterxml.jackson.core.exc.StreamReadException;
 import com.fasterxml.jackson.databind.DatabindException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.commons.io.IOUtils;
+import org.json.JSONObject;
+
+import java.io.BufferedReader;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.nio.charset.Charset;
 
 public class JsonUrlReader {
 
-    public static void main(String[] args) throws StreamReadException, DatabindException, MalformedURLException, IOException {
+    public static void main(String[] args) throws Exception {
         String url = args[0];
 
         JsonNode node = JsonUrlReader.get(url);
         System.out.println(node.toPrettyString());
     }
 
-    public static String stream(String url) throws IOException {
-        try (InputStream input = new URL(url).openStream()) {
+    public static String stream(String url) throws Exception {
+        try (InputStream input = new URI(url).toURL().openStream()) {
             InputStreamReader isr = new InputStreamReader(input, Charset.forName("UTF-8"));
             BufferedReader reader = new BufferedReader(isr);
             StringBuilder json = new StringBuilder();
@@ -38,24 +36,24 @@ public class JsonUrlReader {
         }
     }
 
-    public static JsonNode get(String url) throws StreamReadException, DatabindException, MalformedURLException, IOException {
+    public static JsonNode get(String url) throws StreamReadException, DatabindException, MalformedURLException, Exception {
         ObjectMapper mapper = new ObjectMapper();
-        JsonNode json = mapper.readTree(new URL(url));
+        JsonNode json = mapper.readTree(new URI(url).toURL());
         return json;
     }
 
-    public static <T> T get(String url, Class<T> type) throws StreamReadException, DatabindException, MalformedURLException, IOException {
+    public static <T> T get(String url, Class<T> type) throws StreamReadException, DatabindException, MalformedURLException, Exception {
         ObjectMapper mapper = new ObjectMapper();
-        T entity = mapper.readValue(new URL(url), type);
+        T entity = mapper.readValue(new URI(url).toURL(), type);
         return entity;
     }
 
-    public static String getString(String url) throws StreamReadException, DatabindException, MalformedURLException, IOException {
+    public static String getString(String url) throws Exception {
         return get(url).toPrettyString();
     }
 
-    public static JSONObject getJson(String url) throws MalformedURLException, IOException {
-        String json = IOUtils.toString(new URL(url), Charset.forName("UTF-8"));
+    public static JSONObject getJson(String url) throws Exception {
+        String json = IOUtils.toString(new URI(url).toURL(), Charset.forName("UTF-8"));
         JSONObject object = new JSONObject(json);
         return object;
     }
