@@ -1,6 +1,7 @@
 package com.baeldung.lombok.intro;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 import java.time.Instant;
@@ -12,46 +13,46 @@ public class LoginResultLiveTest {
 
     @Test
     public void givenAnnotatedLoginResult_thenHasConstructorForAllFinalFields()
-    throws MalformedURLException {
+    throws Exception {
         /* LoginResult loginResult = */ new LoginResult(
                 Instant.now(),
                 "apitoken",
                 Duration.ofHours(1),
-                new URL("https://api.product.com/token-refresh"));
+                new URI("https://api.product.com/token-refresh").toURL());
     }
 
     @Test
     public void givenAnnotatedLoginResult_thenHasFluentGetters()
-    throws MalformedURLException {
+    throws Exception {
         Instant loginTs = Instant.now();
         LoginResult loginResult = new LoginResult(
                 loginTs,
                 "apitoken",
                 Duration.ofHours(1),
-                new URL("https://api.product.com/token-refresh"));
+                new URI("https://api.product.com/token-refresh").toURL());
 
         Assert.assertEquals(loginResult.loginTs(), loginTs);
         Assert.assertEquals(loginResult.authToken(), "apitoken");
         Assert.assertEquals(loginResult.tokenValidity(), Duration.ofHours(1));
-        Assert.assertEquals(loginResult.tokenRefreshUrl(), new URL("https://api.product.com/token-refresh"));
+        Assert.assertEquals(loginResult.tokenRefreshUrl(), new URI("https://api.product.com/token-refresh").toURL());
     }
 
     @Test
     public void givenAnnotatedLoginResult_whenSameApiToken_thenEqualInstances()
-    throws MalformedURLException {
+    throws Exception {
         String theSameApiToken = "testapitoken";
 
         LoginResult loginResult1 = new LoginResult(
                 Instant.now(),
                 theSameApiToken,
                 Duration.ofHours(1),
-                new URL("https://api.product.com/token-refresh"));
+                new URI("https://api.product.com/token-refresh").toURL());
 
         LoginResult loginResult2 = new LoginResult(
                 Instant.now(),
                 theSameApiToken,
                 Duration.ofHours(2),
-                new URL("https://api.product.com/token-refresh-alt"));
+                new URI("https://api.product.com/token-refresh-alt").toURL());
 
         Assert.assertEquals(loginResult1, loginResult2);
     }
