@@ -6,6 +6,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 import org.junit.ClassRule;
@@ -30,7 +31,7 @@ public class DockerComposeContainerLiveTest {
     }
 
     private String simpleGetRequest(String address) throws Exception {
-        URL url = new URL(address);
+        URL url = new URI(address).toURL();
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
         con.setRequestMethod("GET");
 
