@@ -1,5 +1,6 @@
 package com.baeldung.jaxws.client;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 
@@ -7,7 +8,7 @@ public class EmployeeServiceClient {
 
     public static void main(String[] args) throws Exception {
 
-        URL url = new URL("http://localhost:8080/employeeservice?wsdl");
+        URL url = new URI("http://localhost:8080/employeeservice?wsdl").toURL();
 
         EmployeeService_Service employeeService_Service = new EmployeeService_Service(url);
         EmployeeService employeeServiceProxy = employeeService_Service.getEmployeeServiceImplPort();
